Updated the working

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             <button class="boxes"></button>
             <button class="boxes"></button>
         </div>
+        <!-- <div id="right">nevid</div> -->
         
     </div>
+    <div >
+        <h3 id="result">
+Start Playing
+        </h3>
+    </div>
     <button id="reset">Reset</button> 
-
-
 
     </main>
     <script src="app.js"></script>
