added winner panel and turn status with higlighting winning pattern

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <main>
-    <h1>Tic_Tac_Toe</h1>
+    <h1 id="MainHeading">Tic-Tac-Toe</h1>
     <div class="container">
         <div class="game">
             <button class="boxes"></button>
@@ -31,6 +31,7 @@ Start Playing
         </h3>
     </div>
     <button id="reset">Reset</button> 
+    
 
     </main>
     <script src="app.js"></script>
